tests/cases/errors/emit_unrenderable_type/main.sv
module Top;
  logic l;
endmodule
